@@ -10,7 +10,7 @@
     </parent>
     <groupId>org.geoproject</groupId>
     <artifactId>InGEO</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1-snapshot</version>
     <name>InGEO</name>
     <description>InGEO</description>
     <properties>
@@ -22,7 +22,7 @@
         <junit.version>4.13.2</junit.version>
         <commons-lang.version>2.5</commons-lang.version>
         <org.openjfx.version>17.0.2</org.openjfx.version>
-        <org.controlsfx.version>11.1.2</org.controlsfx.version>
+        <org.controlsfx.version>11.1.0</org.controlsfx.version>
         <org.apache.logging.log4j.version>2.19.0</org.apache.logging.log4j.version>
         <org.apache.maven.plugins.version>3.8.1</org.apache.maven.plugins.version>
     </properties>
@@ -108,6 +108,18 @@
             <version>${commons-lang.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>jakarta.interceptor</groupId>
+            <artifactId>jakarta.interceptor-api</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.enterprise</groupId>
+            <artifactId>jakarta.enterprise.cdi-api</artifactId>
+            <version>4.0.1</version>
+        </dependency>
+
+
         <!--JavaFX-->
         <dependency>
             <groupId>org.openjfx</groupId>
@@ -136,33 +148,34 @@
             <artifactId>log4j-core</artifactId>
             <version>${org.apache.logging.log4j.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-community-dialects</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>3.30.1</version>
+        </dependency>
     </dependencies>
+
 
     <build>
         <plugins>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${project.parent.version}</version>
-                <configuration>
-                    <excludes>
-                        <exclude>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                        </exclude>
-                    </excludes>
-                </configuration>
-            </plugin>
-            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>${org.apache.maven.plugins.version}</version>
                 <configuration>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
                             <version>${org.projectlombok.version}</version>
+                        </path>
+                        <path>
+                            <groupId>org.controlsfx</groupId>
+                            <artifactId>controlsfx</artifactId>
+                            <version>${org.controlsfx.version}</version>
                         </path>
                         <path>
                             <groupId>org.mapstruct</groupId>
@@ -182,8 +195,65 @@
                     </annotationProcessorPaths>
                     <compilerArgs>
                         -Amapstruct.defaultComponentModel=spring
+                        --add-exports javafx.base/com.sun.javafx.event=org.controlsfx.controls
                     </compilerArgs>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>org.geoproject.ingeo.InGeoApplication</mainClass>
+                        </manifest>
+                    </archive>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${project.parent.version}</version>
+                <configuration>
+                    <excludes>
+                        <exclude>
+                            <groupId>org.projectlombok</groupId>
+                            <artifactId>lombok</artifactId>
+                        </exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>io.github.fvarrui</groupId>
+                <artifactId>javapackager</artifactId>
+                <version>1.7.5</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>package</goal>
+                        </goals>
+                        <configuration>
+                            <!-- mandatory -->
+                            <mainClass>org.geoproject.ingeo.InGeoApplication</mainClass>
+                            <!-- optional -->
+                            <generateInstaller>false</generateInstaller>
+                            <administratorRequired>false</administratorRequired>
+                            <bundleJre>true</bundleJre>
+                            <createZipball>true</createZipball>
+                            <vmArgs>
+                                <arg>--add-exports</arg>
+                                <arg>javafx.base/com.sun.javafx.event=ALL-UNNAMED</arg>
+                            </vmArgs>
+                            <platform>windows</platform>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
